# christmas_orchestrator

./: pyproject.toml  setup.py
christmas_orchestrator/: __init__.py  run.py
christmas_orchestrator/configs/: deployment.json
letter_writer_agent/: pyproject.toml
letter_writer_agent/letter_writer_agent/: run.py
letter_writer_agent/letter_writer_agent/configs/: deployment.json
research_agent/: pyproject.toml
research_agent/configs/: deployment.json
research_agent/research_agent/: run.py
research_agent/research_agent/configs/: deployment.json
