[tool.poetry]
name = "letter_writer_agent"
version = "0.1.0"
description = "Letter writer agent for creating Christmas letters using browser automation"
authors = ["Tanmay Sharma"]

[tool.poetry.dependencies]
python = "^3.11"
naptha-sdk = "*"
browser-use-sdk = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
